<resources>
    <string name="app_name">Play Outdoors</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="weather">Weather</string>
    <string name="home">Home</string>
    <string name="campground_search">Campground Search</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="maps">Maps</string>
    <string name="select_an_option_below_to_begin">Select An Option Below To Begin</string>
    <string name="play_outdoors">PLAY OUTDOORS!</string>
    <string name="state_parks">State Parks</string>
    <string name="home_main">Home</string>
    <string name="weather_main">Weather</string>
    <string name="maps_main">Maps</string>
    <string name="settings_main">Settings</string>
    <string name="camping">Camping</string>
    <string name="trails">Trails</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_us">Welcome!</string>
    <string name="trails_us">Trails</string>
    <string name="camping_us">Camping</string>
    <string name="settings_us">Settings</string>
    <string name="maps_us">Maps</string>
    <string name="weather_us">Weather</string>
    <string name="home_us">Home</string>
    <string name="state_parks_us">State Parks</string>
</resources>