<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_green"
    android:paddingTop="?attr/actionBarSize">

    <TextView
        android:id="@+id/textView"
        android:layout_width="397dp"
        android:layout_height="63dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="87dp" />

    <Button
        android:id="@+id/trails"
        android:layout_width="112dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@color/black"
        android:text="@string/trails"
        tools:layout_editor_absoluteX="273dp"
        tools:layout_editor_absoluteY="472dp" />

    <Button
        android:id="@+id/camp_search"
        android:layout_width="112dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@color/black"
        android:text="@string/camping"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="472dp" />

    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@color/black"
        android:text="@string/settings_main"
        tools:layout_editor_absoluteX="298dp"
        tools:layout_editor_absoluteY="595dp" />

    <Button
        android:id="@+id/maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@color/black"
        android:text="@string/maps_main"
        tools:layout_editor_absoluteX="208dp"
        tools:layout_editor_absoluteY="595" />

    <Button
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@color/black"
        android:text="@string/weather_main"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="595" />

    <fragment
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

    <Button
        android:id="@+id/navigation_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@color/black"
        android:text="@string/home_main"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="595dp" />

    <Button
        android:id="@+id/state_parks"
        android:layout_width="112dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@color/black"
        android:text="@string/state_parks"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="472dp" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="397dp"
        android:layout_height="63dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/play_outdoors"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="5dp" />

    <EditText
        android:id="@+id/options"
        android:layout_width="391dp"
        android:layout_height="53dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/select_an_option_below_to_begin"
        android:textAlignment="center"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="400dp" />

    <ImageView
        android:id="@+id/bike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bike_1"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="289dp" />

    <ImageView
        android:id="@+id/camper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/camper_1"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="162dp" />

    <ImageView
        android:id="@+id/hiker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/hike_1"
        tools:layout_editor_absoluteX="234dp"
        tools:layout_editor_absoluteY="277dp" />

</androidx.constraintlayout.widget.ConstraintLayout>